[gd_scene load_steps=3 format=3 uid="uid://smuluikuu7p4"]

[ext_resource type="Script" uid="uid://37hua6q76y1t" path="res://test/quest_graph/QuestPoiNode.gd" id="1_aeues"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ch1ev"]
bg_color = Color(1, 1, 1, 1)

[node name="QuestPOINode" type="GraphNode"]
offset_right = 272.0
offset_bottom = 216.0
title = "POI"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_aeues")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusPanel" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.461862, 1.05888e-06, 2.64719e-07, 1)
custom_minimum_size = Vector2(4, 4)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ch1ev")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1
